syntax = "proto3";

option csharp_namespace = "Appointment.Grpc";
import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

package appointment;

// The greeting service definition.
service Appointment {
  // Sends a greeting
  rpc GetAppointments (GetAppointmentRequest) returns (ListAppointmentResponse);
  rpc DeleteAppointment (AppointmentRequest) returns (DeleteResponse);
  rpc AddAppointment (AppointmentRequest) returns (AppointmentResponse);
  rpc UpdateAppointment (AppointmentRequest) returns (AppointmentResponse);
}

// The request message containing the user's name.
message GetAppointmentRequest {
   google.protobuf.Timestamp StartDate  = 6;
   google.protobuf.Timestamp EndDate  = 7;
}

message DeleteResponse {
   bool result = 1;
}

message ListAppointmentResponse {
    repeated AppointmentResponse Appointments = 1;
}

message AppointmentResponse {
   int32 Id = 1;
   string Name = 2;
   string Description  = 3;
   string Url  = 4;
   string Location  = 5;
   google.protobuf.Timestamp StartDate  = 6;
   google.protobuf.Timestamp EndDate  = 7;
}

message AppointmentRequest {
   int32 Id = 1;
   string Name = 2;
   string Description  = 3;
   string Url  = 4;
   string Location  = 5;
   google.protobuf.Timestamp StartDate  = 6;
   google.protobuf.Timestamp EndDate  = 7;
}


